Archive2/cc/bad7612502f7b1/output
main.cpp: In function 'int main()':
main.cpp:8:25: error: must #include <typeinfo> before using typeid
     std::cout << typeid(x).str() << "\n";
                         ^
